top-players added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- top-players & top-blogs -->
+  <main>
+    <section class="container">
+        <div class="top-players">
+            <h2 class="section-title">Top Players</h2>
+            <div class="players">
+               
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-1.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-2.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-3.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-4.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-5.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-6.png" alt="Player Picture"><h1 class="player-name">Top Player-1</h3></div>
+            </div>
+
+        </div>
+        <hr>
+    </section>
+  </main>
 </body>
 </html>
