basic site finished without media querries

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body>
     <!-- top-players & top-blogs -->
@@ -24,6 +25,126 @@
 
         </div>
         <hr>
+        <div class="top-blogs">
+          <h2 class="section-title">Top Blogs</h2>
+          <div class="blogs">
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/leader-board-css3/images/Mask-Group.png" alt="">
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/leader-board-css3/images/Mask Group-3.png" alt="">
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/leader-board-css3/images/Mask Group-2.png" alt="">
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+              </div>
+            </article>
+            <article class="blog">
+              <div class="thumbnail">
+                <img src="images/leader-board-css3/images/Mask Group-1.png" alt="">
+              </div>
+              <div class="blog-info">
+                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
+                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+              </div>
+            </article>
+          </div>
+        </div>
+    </section>
+    <section class="container">
+      <h2 class="section-title">Latest Courses</h2>
+      <div class="courses">
+        <div class="course">
+          <div class="course-banner">
+            <img src="images/leader-board-css3/images/Mask Group-3.png" alt="">
+          </div>
+          <div class="course-details">
+            <h3 class="course-title">
+              React - The Complete Guide 2024
+            </h3>
+            <p class="course-author"> Helal Iqbal</p>
+            <div class="course-info">
+             <div class="rating">
+               <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star empty"></i>
+                   <span>4.5</span>
+               </div>              
+               <div class="course-duration">
+                <i class="far fa-clock"></i>
+                01:30hr
+               </div>
+            </div>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-banner">
+            <img src="images/leader-board-css3/images/Group 2.png" alt="">
+          </div>
+          <div class="course-details">
+            <h3 class="course-title">
+              React - The Complete Guide 2024
+            </h3>
+            <p class="course-author"> Helal Iqbal</p>
+            <div class="course-info">
+             <div class="rating">
+               <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star empty"></i>
+                   <span>4.5</span>
+               </div>              
+               <div class="course-duration">
+                <i class="far fa-clock"></i>
+                01:30hr
+               </div>
+            </div>
+          </div>
+        </div><div class="course">
+          <div class="course-banner">
+            <img src="images/leader-board-css3/images/Mask Group-4.png" alt="">
+          </div>
+          <div class="course-details">
+            <h3 class="course-title">
+              React - The Complete Guide 2024
+            </h3>
+            <p class="course-author"> Helal Iqbal</p>
+            <div class="course-info">
+             <div class="rating">
+               <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star filled"></i>
+                   <i class="fa fa-star empty"></i>
+                   <span>4.5</span>
+               </div>              
+               <div class="course-duration">
+                <i class="far fa-clock"></i>
+                01:30hr
+               </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 </body>
