Real name and Caption added

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <h2 class="section-title">Top Players</h2>
             <div class="players">
                
-  <div class="player"><img src="images/leader-board-css3/images/Ellipse-1.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
-  <div class="player"><img src="images/leader-board-css3/images/Ellipse-2.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
-  <div class="player"><img src="images/leader-board-css3/images/Ellipse-3.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
-  <div class="player"><img src="images/leader-board-css3/images/Ellipse-4.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
-  <div class="player"><img src="images/leader-board-css3/images/Ellipse-5.png" alt="Player picture"><h1 class="player-name">Top Player-1</h3></div>
-  <div class="player"><img src="images/leader-board-css3/images/Ellipse-6.png" alt="Player Picture"><h1 class="player-name">Top Player-1</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-1.png" alt="Player picture"><h1 class="player-name">Daemon Targeryan</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-2.png" alt="Player picture"><h1 class="player-name">Rhaenyra Targeryan</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-3.png" alt="Player picture"><h1 class="player-name">Aegon Targeryan</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-4.png" alt="Player picture"><h1 class="player-name">Alicent HighTower</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-5.png" alt="Player picture"><h1 class="player-name">Jacerys Valeryon</h3></div>
+  <div class="player"><img src="images/leader-board-css3/images/Ellipse-6.png" alt="Player Picture"><h1 class="player-name">Aegon III</h3></div>
             </div>
 
         </div>
@@ -39,11 +39,12 @@
             </article>
             <article class="blog">
               <div class="thumbnail">
-                <img src="images/leader-board-css3/images/Mask Group-3.png" alt="">
+                <img src="images/leader-board-css3/images/Mask Group-5.png" alt="">
               </div>
               <div class="blog-info">
-                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
-                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+                <h3 class="blog-title">Your logo is 
+                  copied</h3>
+                <p class="blog-author">By <a href="">Vermithor Targeryan</a></p>
               </div>
             </article>
             <article class="blog">
@@ -51,8 +52,9 @@
                 <img src="images/leader-board-css3/images/Mask Group-2.png" alt="">
               </div>
               <div class="blog-info">
-                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
-                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+                <h3 class="blog-title">UI cheat sheet: 
+                  list vs grids</h3>
+                <p class="blog-author">By <a href="">Robbin Stark</a></p>
               </div>
             </article>
             <article class="blog">
@@ -60,8 +62,9 @@
                 <img src="images/leader-board-css3/images/Mask Group-1.png" alt="">
               </div>
               <div class="blog-info">
-                <h3 class="blog-title">13 of my UI/UX Goodies</h3>
-                <p class="blog-author">By <a href="">Steve Targeryan</a></p>
+                <h3 class="blog-title">7 typography tips 
+                  for interface design</h3>
+                <p class="blog-author">By <a href="">Ragnar Lothbrok</a></p>
               </div>
             </article>
           </div>
@@ -101,9 +104,9 @@
           </div>
           <div class="course-details">
             <h3 class="course-title">
-              React - The Complete Guide 2024
+              PowerPoint : Master Powerpoint Course 2024
             </h3>
-            <p class="course-author"> Helal Iqbal</p>
+            <p class="course-author"> Asif Jamil</p>
             <div class="course-info">
              <div class="rating">
                <i class="fa fa-star filled"></i>
@@ -125,9 +128,9 @@
           </div>
           <div class="course-details">
             <h3 class="course-title">
-              React - The Complete Guide 2024
+              The Complete JavaScript Course 2024
             </h3>
-            <p class="course-author"> Helal Iqbal</p>
+            <p class="course-author">Leo Stark</p>
             <div class="course-info">
              <div class="rating">
                <i class="fa fa-star filled"></i>
